--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <main>
     <div class="container" >
     <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот</h1>
+      <h1 class="heading">Опознанный Енот</h1>
       <p>Junior верстальщик</p>
     </section>
 
